# blog_notebooks

./: .gitignore  README.md  pyproject.toml
blog_notebooks/: llama_index_and_elasticsearch_p1.ipynb
