[tool.poetry]
name = "blog-notebooks"
version = "0.1.0"
description = ""
authors = ["Igor Motov <igor@motovs.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.40"
llama-index-vector-stores-elasticsearch = "^0.2.0"
ipykernel = "^6.29.4"
py7zr = "^0.21.0"
python-dotenv = "^1.0.1"
xmltodict = "^0.13.0"
wikitextparser = "^0.55.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
